[gd_scene load_steps=10 format=3 uid="uid://dylfopogulqp8"]

[ext_resource type="Script" path="res://DungeonGenerator.gd" id="1_hbncl"]
[ext_resource type="Texture2D" uid="uid://cf430j4ywtr5m" path="res://icon.svg" id="2_o55f0"]
[ext_resource type="Texture2D" uid="uid://brabm671b20oc" path="res://HallwayTexture.tres" id="2_xdxnw"]
[ext_resource type="Texture2D" uid="uid://d2gdmaxd1v26i" path="res://EnemyTexture.tres" id="3_04ffx"]
[ext_resource type="Texture2D" uid="uid://des55ipa0pews" path="res://ExitTexture.tres" id="4_7fd0j"]
[ext_resource type="Texture2D" uid="uid://bvd7gf315ov45" path="res://EntranceTexture.tres" id="5_rd4jp"]
[ext_resource type="Texture2D" uid="uid://com1g2xiwfu7w" path="res://StairwellTexture.tres" id="6_yttcb"]
[ext_resource type="Texture2D" uid="uid://cnybyovfie7wi" path="res://WallTexture.tres" id="7_cabuy"]

[sub_resource type="CanvasTexture" id="CanvasTexture_snaua"]

[node name="DungeonGenerator" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hbncl")

[node name="Background" type="TextureRect" parent="."]
self_modulate = Color(0.787759, 0.787759, 0.787759, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("CanvasTexture_snaua")

[node name="Map" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 340.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2

[node name="Grid" type="GridContainer" parent="Map"]
layout_mode = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0

[node name="Inputs" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -364.0
offset_right = -86.0
grow_horizontal = 0
grow_vertical = 2

[node name="MapX" type="TextEdit" parent="Inputs"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "3"
placeholder_text = "X Value"

[node name="MapY" type="TextEdit" parent="Inputs"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "3"
placeholder_text = "Y Value"

[node name="UpdateButton" type="TextureButton" parent="Inputs"]
self_modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
texture_normal = ExtResource("2_o55f0")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="Inputs/UpdateButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "UPDATE GRID"

[node name="Cells" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -452.0
offset_top = 50.0
offset_right = -367.0
offset_bottom = 580.0
grow_horizontal = 0

[node name="Hallway" type="TextureButton" parent="Cells"]
custom_minimum_size = Vector2(0, 85)
layout_mode = 2
texture_normal = ExtResource("2_xdxnw")
ignore_texture_size = true
stretch_mode = 0

[node name="Enemy" type="TextureButton" parent="Cells"]
custom_minimum_size = Vector2(0, 85)
layout_mode = 2
texture_normal = ExtResource("3_04ffx")
ignore_texture_size = true
stretch_mode = 0

[node name="Exit" type="TextureButton" parent="Cells"]
custom_minimum_size = Vector2(0, 85)
layout_mode = 2
texture_normal = ExtResource("4_7fd0j")
ignore_texture_size = true
stretch_mode = 0

[node name="Entrance" type="TextureButton" parent="Cells"]
custom_minimum_size = Vector2(0, 85)
layout_mode = 2
texture_normal = ExtResource("5_rd4jp")
ignore_texture_size = true
stretch_mode = 0

[node name="Stairwell" type="TextureButton" parent="Cells"]
custom_minimum_size = Vector2(0, 85)
layout_mode = 2
texture_normal = ExtResource("6_yttcb")
ignore_texture_size = true
stretch_mode = 0

[node name="Wall" type="TextureButton" parent="Cells"]
custom_minimum_size = Vector2(0, 85)
layout_mode = 2
texture_normal = ExtResource("7_cabuy")
ignore_texture_size = true
stretch_mode = 0

[connection signal="pressed" from="Inputs/UpdateButton" to="." method="_on_update_button_pressed"]
[connection signal="pressed" from="Cells/Hallway" to="." method="_on_hallway_pressed"]
[connection signal="pressed" from="Cells/Enemy" to="." method="_on_enemy_pressed"]
[connection signal="pressed" from="Cells/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Cells/Entrance" to="." method="_on_entrance_pressed"]
[connection signal="pressed" from="Cells/Stairwell" to="." method="_on_stairwell_pressed"]
[connection signal="pressed" from="Cells/Wall" to="." method="_on_wall_pressed"]
